# BIOPERIANT12

./: LICENSE  README.md  __init__.py  bioperiant12.py  bioperiant_main.py  pyproject.toml  requirements.txt  utils.py
bioperiant_tools/: setup.cfg
bioperiant_tools/src/bioperiant_tools/: bioperiant_main.py  utils.py
nchangPy/: nemo_fxns.py
notebooks/: starter-notebook.ipynb  starter.ipynb
periant_tools/: periant_main.py
periant_tools/data_required/: nemo_coefs_reader.py  nemo_output_coeffs.csv  nemo_output_coeffs_periant.csv
periant_tools/utils/: nemo_functions.py  periant_time.py
