[metadata]
name = bioperiant_tools
version = 0.1
description = library of functions for working with the BIOPERIANT ocean model data
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: independent
[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.7
[options.packages.find]
where = src